kubernetes/v1.0/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalog-v1
  namespace: v1-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-catalog
      version: v1.0
  template:
    metadata:
      labels:
        app: product-catalog
        version: v1.0
    spec:
      containers:
      - name: app
        image: rachitharajesh/product-catalog:v1.0.0
        ports:
        - containerPort: 9191
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 9191
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 9191
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
