kubernetes/v1.0/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-catalog-service
  namespace: v1-namespace
spec:
  type: LoadBalancer
  selector:
    app: product-catalog
    version: v1.0
  ports:
    - port: 80
      targetPort: 9191
